--- a/app/src/main/res/layout/fragment_instructions.xml
+++ b/app/src/main/res/layout/fragment_instructions.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<!-- it's simple ui in vertical line so
+ it's better to change it to linear layout-->
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".InstractionsFragment">
 
         <ImageView
@@ -13,11 +16,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/big_shoes"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.136" />
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/_32sdp" />
 
         <TextView
             android:id="@+id/textview_instructions"
@@ -27,28 +27,19 @@
             android:paddingHorizontal="@dimen/_12sdp"
             android:text="@string/hello_first_fragment"
             android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageView"
-            app:layout_constraintVertical_bias="0.195"
-            app:layout_constraintVertical_chainStyle="spread" />
+            android:layout_marginTop="@dimen/_64sdp" />
 
         <TextView
             android:id="@+id/textview_continue"
             style="@style/WelcomeTextStyle"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="@dimen/_40sdp"
             android:text="@string/continue_text"
             android:textAlignment="center"
             android:textColor="@color/light_gray"
             android:textSize="@dimen/_17sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textview_instructions" />
+            android:layout_gravity="center" />
 
         <Button
             android:id="@+id/button_first"
@@ -56,11 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_30sdp"
             android:text="@string/next"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textview_continue"
-            app:layout_constraintVertical_bias="0.165"
-            tools:ignore="TouchTargetSizeCheck" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/_32sdp" />
+    </LinearLayout>
 </layout>
